# ToolFailBench_

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  quickstart.ipynb  requirements.txt  setup.sh
configs/: default.yaml
evaluation/: data.py  detect.py  metrics.py  report.py  validate_results.py
evaluation/judges/: aggregate.py  judge.py
evaluation/judges/configs/: glm47_flash.yaml  glm47_fp8.yaml  qwen35_397b.yaml
evaluation/judges/prompts/: base_rubric.md  variant_a_decision_tree.md  variant_b_evidence.md
modal_apps/: judge_1_qwen35.py  judge_2_glm47.py  serve_qwq.py
models/: README.md  registry.py
models/configs/anthropic/: claude-haiku-4-5.yaml  claude-sonnet-4.yaml
models/configs/deepseek/: deepseek-r1-distill-llama-8b.yaml  deepseek-v4-flash.yaml
models/configs/gemma/: gemma4-27b-a4b.yaml  gemma4-31b.yaml
models/configs/glm/: glm4-9b.yaml  glm4.7-flash.yaml
models/configs/llama/: llama3.1-70b.yaml  llama3.1-8b.yaml
models/configs/mistral/: mistral-7b.yaml
models/configs/openai/: gpt-5.4-mini-2026-03-17.yaml
models/configs/qwen/: qwen2.5-32b-instruct.yaml  qwen2.5-72b-instruct.yaml  qwen3.5-9b.yaml  (+5 more)
scripts/: preflight.py  run_eval.py  run_eval.sh  run_eval_detached.sh  run_judge.py  run_judge.sh  serve_model.py
system_prompts/v5/: cybersecurity.md  finance.md  legal.md  medical.md  real_estate.md
tasks_v5/cybersecurity/: tasks.json  tools.json
tasks_v5/finance/: tasks.json  tools.json
tasks_v5/legal/: tasks.json  tools.json
tasks_v5/medical/: tasks.json  tools.json
tasks_v5/real_estate/: tasks.json  tools.json
(+2 files in other folders)
