[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "toolfailbench"
version = "0.1.0"
description = "Benchmarking mechanistic tool-use failure modes in LLM agents"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]   # pycodestyle errors, pyflakes, isort
ignore = ["E501"]           # line length handled by formatter

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]   # unused imports in __init__ files are fine
